<?xml version="1.0"?>
<package>
  <name>aav_gamepad_driver</name>
  <version>0.1.0</version>
  <description>The aav_gamepad_driver package</description>
  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>
  <license>BSD</license>
  <url type="website">https://code.google.com/p/aav-ros-car/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>

  <export>
  </export>
</package>
