cmake_minimum_required(VERSION 2.8)
project(cam_tracker)
set(CMAKE_BUILD_TYPE Debug)
find_package(OpenCV REQUIRED)
add_executable(calibrate calibrate.cpp)
add_executable(capture capture.cpp)
add_executable(manipulate manipulate.cpp)
add_executable(centroid centroid.cpp)
add_executable(find_digits find_digits.cpp)
target_link_libraries(calibrate ${OpenCV_LIBS})
target_link_libraries(capture ${OpenCV_LIBS})
target_link_libraries(manipulate ${OpenCV_LIBS})
target_link_libraries(centroid ${OpenCV_LIBS})
target_link_libraries(find_digits ${OpenCV_LIBS})

