<?xml version="1.0"?>
<package>
  <name>aav_control</name>
  <version>0.0.1</version>
  <description>AAV vehicle controller</description>

  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>robot_localization</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
