<?xml version="1.0"?>
<package>
  <name>aav_control</name>
  <version>0.0.1</version>
  <description>AAV vehicle controller</description>

  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aav_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>aav_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
