<?xml version="1.0"?>
<package>
  <name>aav_gazebo_plugins</name>
  <version>0.0.1</version>
  <description>Gazebo plugins for the AAV vehicle</description>

  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
