<?xml version="1.0"?>
<package>
  <name>aav_simple_description</name>
  <version>0.0.1</version>
  <description>A simple URDF description of the AAV car</description>

  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>

