<?xml version="1.0"?>
<package>
  <name>aav_quintic</name>
  <version>0.1.0</version>
  <description>library for calculating quintic-spline paths</description>

  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aav_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>aav_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
