<?xml version="1.0"?>
<package>
  <name>aav_gazebo</name>
  <version>0.0.2</version>
  <description>Gazebo package for the AAV vehicle</description>

  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>aav_description</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
