<?xml version="1.0"?>
<package>
  <name>aav_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RVIZ plugins for the AAV vehicle</description>

  <maintainer email="samuel.j.bishop@gmail.com">Sam Bishop</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>aav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_descriptions.xml"/>
  </export>
</package>
